Refactor + Update ReadMe